Fix Scrollbar (#7)

--- a/game.css
+++ b/game.css
@@ -9,7 +9,7 @@ body {
 }
 
 .nescontainer {
-  width:100%;
+  width:98.5%;
   padding-left: 0px;
   padding-right: 0px;
 }
